[gd_scene load_steps=17 format=3 uid="uid://cng1hdh4kuxrw"]

[ext_resource type="Script" uid="uid://bvnk4w5l7f20d" path="res://scenes/player/player.gd" id="1_3vyb7"]
[ext_resource type="PackedScene" uid="uid://b0hpmch812els" path="res://scenes/player/player_visual.tscn" id="2_y4r1p"]
[ext_resource type="PackedScene" uid="uid://bt83ghg2tyrgw" path="res://scenes/systems/weapons/weapon_system.tscn" id="3_dqkch"]
[ext_resource type="PackedScene" uid="uid://cfr6dshc1ngsh" path="res://scenes/systems/weapons/cannon/basic_bullet.tscn" id="4_gx1jg"]
[ext_resource type="PackedScene" uid="uid://b5k51vab0hjpc" path="res://scenes/systems/modules/module_system.tscn" id="4_qlg0r"]
[ext_resource type="PackedScene" uid="uid://ckkccjr144hjs" path="res://scenes/systems/power/power_system.tscn" id="5_qlg0r"]
[ext_resource type="Script" uid="uid://ci7we2a0ieoim" path="res://scenes/systems/weapons/cannon/cannon_weapon.gd" id="5_smehm"]
[ext_resource type="PackedScene" uid="uid://n8vo022raq7l" path="res://scenes/player/weapon_insertion_system.tscn" id="6_fm80t"]
[ext_resource type="Texture2D" uid="uid://c6k4yokkjgfxh" path="res://assets/weapon_icons/cannon/cannon_weapon.png" id="7_je7p5"]
[ext_resource type="Script" uid="uid://do58sux7hyofl" path="res://scenes/systems/modules/module_insertion_system.gd" id="7_smehm"]
[ext_resource type="AudioStream" uid="uid://cexxkfs374sut" path="res://assets/sound_effects/cannon.mp3" id="7_ugbui"]
[ext_resource type="AudioStream" uid="uid://bcla6are3y60c" path="res://assets/sound_effects/module pickup v3.mp3" id="12_gx1jg"]
[ext_resource type="AudioStream" uid="uid://dy2n8wa150pqc" path="res://assets/sound_effects/engine running.mp3" id="13_gx1jg"]
[ext_resource type="AudioStream" uid="uid://cynhn66sbneuc" path="res://assets/sound_effects/weapon pickup v2.mp3" id="13_ugbui"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_ur7pv"]
points = PackedVector2Array(0, -25, 20, 0, 20, 9, -20, 9, -20, 0)

[sub_resource type="Resource" id="Resource_ur7pv"]
script = ExtResource("5_smehm")
base_damage = 10.0
weapon_icon = ExtResource("7_je7p5")
weapon_sfx = ExtResource("7_ugbui")
metadata/_custom_type_script = "uid://ci7we2a0ieoim"

[node name="Player" type="Area2D" node_paths=PackedStringArray("weapon_system", "module_system") groups=["player"]]
script = ExtResource("1_3vyb7")
weapon_system = NodePath("Systems/WeaponSystem")
module_system = NodePath("Systems/ModuleSystem")

[node name="PlayerVisual" parent="." instance=ExtResource("2_y4r1p")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("ConvexPolygonShape2D_ur7pv")

[node name="Systems" type="Node" parent="."]

[node name="WeaponSystem" parent="Systems" node_paths=PackedStringArray("module_system") instance=ExtResource("3_dqkch")]
belongs_to_player = true
current_weapon = SubResource("Resource_ur7pv")
module_system = NodePath("../ModuleSystem")

[node name="WeaponInsertionSystem" parent="Systems" node_paths=PackedStringArray("weapon_system") instance=ExtResource("6_fm80t")]
weapon_system = NodePath("../WeaponSystem")

[node name="ModuleSystem" parent="Systems" node_paths=PackedStringArray("power_system") instance=ExtResource("4_qlg0r")]
power_system = NodePath("../PowerSystem")

[node name="ModuleInsertionSystem" type="Node" parent="Systems" node_paths=PackedStringArray("module_system")]
script = ExtResource("7_smehm")
module_system = NodePath("../ModuleSystem")

[node name="PowerSystem" parent="Systems" instance=ExtResource("5_qlg0r")]

[node name="SoundEffects" type="Node" parent="."]

[node name="SFX_ModulePickup" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("12_gx1jg")
volume_db = -3.0
bus = &"Sound Effects"

[node name="SFX_WeaponPickup" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("13_ugbui")
bus = &"Sound Effects"

[node name="SFX_EngineRunning" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("13_gx1jg")
volume_db = 1.0
autoplay = true
parameters/looping = true
